--- a/ConversionService/App.config
+++ b/ConversionService/App.config
@@ -2,27 +2,19 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DB" connectionString="Server=DESKTOP-IG36C62;Integrated security = true;database=NumberConveter" providerName="System.Data.SqlClient" />
+    <add name="DB" connectionString="Server=DESKTOP-IG36C62;Integrated security = true;database=NumberConverter" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.serviceModel>
     <client>
-      <endpoint address="http://localhost:11113/NumberConverterService"
-                behaviorConfiguration="Behaviors.EndpointBehavior"
-                binding="wsHttpBinding"
-                contract="KMA.APZRPMJ2018.NumberConverter.ServiceInterface.IConversionContract"
-                name="Server"
-                bindingConfiguration="customBinding">
+      <endpoint address="http://localhost:11113/NumberConverterService" behaviorConfiguration="Behaviors.EndpointBehavior" binding="wsHttpBinding" contract="KMA.APZRPMJ2018.NumberConverter.ServiceInterface.IConversionContract" name="Server" bindingConfiguration="customBinding">
         
       </endpoint>
     </client>
     <services>
       <service behaviorConfiguration="NumberConverter.Service.NumberConverterServiceBehaviour" name="KMA.APZRPMJ2018.NumberConverter.ConversionService.NumberConverterService">
-        <endpoint address="http://localhost:11113/NumberConverterService"
-                  binding="wsHttpBinding" 
-                  contract="KMA.APZRPMJ2018.NumberConverter.ServiceInterface.IConversionContract" 
-                  bindingConfiguration="customBinding">
+        <endpoint address="http://localhost:11113/NumberConverterService" binding="wsHttpBinding" contract="KMA.APZRPMJ2018.NumberConverter.ServiceInterface.IConversionContract" bindingConfiguration="customBinding">
         </endpoint>
       </service>
     </services>
