--- a/Managers/Managers.csproj
+++ b/Managers/Managers.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>KMA.APZRPMJ2018.NumberConverter.Managers</RootNamespace>
-    <AssemblyName>KMA.APZRPMJ2018.NumberConverterManagers</AssemblyName>
+    <AssemblyName>KMA.APZRPMJ2018.NumberConverter.Managers</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DBManager.cs" />
+    <Compile Include="DbManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializationManager.cs" />
     <Compile Include="StationManager.cs" />
